--- a/proj2/index.html
+++ b/proj2/index.html
@@ -45,3 +45,42 @@
         </div>
       </div>
     </header>
+    <header class="mas2">
+        <section>
+          <div>
+            <h2 class="hero3">Some Random Information</h2>
+            <div class="hero4">
+              <div class="bocs">
+                <div class="mainbox">
+                  <div class="box"></div>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Tenetur!
+                  </p>
+                </div>
+                <div class="mainbox">
+                  <div class="box"></div>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Tenetur!
+                  </p>
+                </div>
+                <div class="mainbox">
+                  <div class="box"></div>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Tenetur!
+                  </p>
+                </div>
+                <div class="mainbox">
+                  <div class="box"></div>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Tenetur!
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </header>
