Add the third output section

--- a/proj2/index.html
+++ b/proj2/index.html
@@ -84,3 +84,15 @@
           </div>
         </section>
       </header>
+      <header class="head3">
+        <section class="section3">
+          <div class="div3">
+            <h3 class="text3">
+              The Lord is closer to those that diligently seek Him. Know that, He
+              gives strength to those who wait, not those who prophesy, but to
+              those that wait.
+            </h3>
+            <p class="auth">- Holy Bible</p>
+          </div>
+        </section>
+      </header>
