Add the fourth output section

--- a/proj2/index.html
+++ b/proj2/index.html
@@ -96,3 +96,24 @@
           </div>
         </section>
       </header>
+      <header class="head4">
+        <section>
+          <div class="container">
+            <div class="box4">
+              <div>
+                <h3 class="h33">It's Time To Call For Action!</h3>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam,
+                  ipsam!
+                </p>
+              </div>
+              <button class="signup2">Sign Up</button>
+            </div>
+          </div>
+        </section>
+      </header>
+      <footer class="foot">
+        <p>Copyright &copy; The Odin Project 2023</p>
+      </footer>
+    </body>
+  </html>
